# mccarthy

./: .gitignore  LICENSE  mccarthy.cabal
app/: Main.hs
src/Language/: Mccarthy.hs
src/Language/Mccarthy/: Eval.hs  Parser.hs  Prim.hs  Repl.hs  Types.hs
